# zlf-index

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
benchmarks/: benchmark_01_speed.py  benchmark_02_beir.py  benchmark_03_mrtydi.py
src/suffix25/: __init__.py  _core.pyx  core.py
src/zlfi/: __init__.py  _core.pyx  core.py
tests/: test_01_core.py  test_02_api.py
