[build-system]
requires = ["setuptools>=69.0", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zlf-index"
version = "0.1.0"
description = "Zipf Latent Fusion (ZLF) sequence similarity index"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Ilhan Karić"}]
keywords = ["information-retrieval", "suffix-automaton", "bm25", "text-similarity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Text Processing :: Indexing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]
server = [
    "elasticsearch>=7.9.1",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zlfi = ["*.pyx", "*.pxd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C90", "N"]
ignore = [
    "S101",  # Allow assert in tests
    "S104",  # Binding to all interfaces (intentional for Docker debugging)
]


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest-benchmark>=5.2.3",
    "rank-bm25>=0.2.2",
]
benchmark = [
    "beir==2.0.0",
    "datasets>=4.6.1",
    "ir-datasets>=0.5.11",
    "pytrec-eval>=0.5",
    "pyserini>=0.45.0",
    "rank-bm25>=0.2.2",
]
